<package format="2">

    <name>path_planner</name>
    <version>0.0.1</version>
    <description>ROS node for path planning</description>
    <maintainer email="graeme.best@uts.edu.au">Graeme Best</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rospy</depend>
    <depend>tf</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>rviz</exec_depend>

</package>
